fix 13390 (List UnsupportedOperationException) (#13394)
introduced by
fix 12868 (NPE UnitSeparator#getComparatorUnitCategories) (#13374)

PlayerUnitsPanel.java
- method getUnits: revert to Collectors.toList() to have modifiable list again